Add missing comma to json file

--- a/deployConfig.json
+++ b/deployConfig.json
@@ -1,4 +1,4 @@
 {
-  "spreadsheetID": "1d9QTbX_fUJoIEU1WU0b33Nvi1uyKm8LyM0fmbBLiJG8"
+  "spreadsheetID": "1d9QTbX_fUJoIEU1WU0b33Nvi1uyKm8LyM0fmbBLiJG8",
   "spreadsheetName": "GroupMembers"
 }
